--- a/towns.css
+++ b/towns.css
@@ -59,7 +59,7 @@ article>header>h1 {
   #result {
 	  display: none;
 	  width: 50%;
-	  margin: 10px auto;
+	  margin: 10px;
 	  padding: 10px 15px;
 	  background: #DDD;
 	  border-radius: 5px;
